Criação da camada Repository

--- a/contato/src/main/resources/application.properties
+++ b/contato/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=contato
+spring.datasource.url=jdbc:postgresql://localhost:5432/contato
+spring.datasource.username=postgres
+spring.datasource.password=220504
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=8094
